--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "homepage": "https://Durgaprasadnaikkethavath.github.io/e_commerce_project",
   "name": "e-commerce-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
-
     "lint": "eslint .",
     "preview": "vite preview"
   },
