--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
+  "homepage": "https://Durgaprasadnaikkethavath.github.io/e_commerce_project/",
   "name": "e-commerce-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
