--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Durgaprasadnaikkethavath.github.io/e_commerce_project/",
+  "homepage": "https://Durgaprasadnaikkethavath.github.io/e-commerce-project",
   "name": "e-commerce-project",
   "private": true,
   "version": "0.0.0",
