--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Durgaprasadnaikkethavath/github.io/e-commerce-project",
-  "name": "e-commerce-project",
+  "homepage": "https://Durgaprasadnaikkethavath/github.io/e-commerce_project",
+  "name": "e-commerce_project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
